--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "signifly/laravel-domain-commands": "^0.0.8",
         "tymon/jwt-auth": "^1.0@dev"
     },
     "require-dev": {
